# api/swagger/swagger.yaml
@@ -356,6 +356,32 @@ paths:
           schema:
             $ref: "#/definitions/SessionId"
 
+  /auth/user/notif/set:
+    post:
+      x-swagger-router-controller: "auth/user/notif/set"
+      responses:
+        200:
+          description: successful response
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: "#/definitions/SetNotif"
+
+  /auth/user/notif/fetch:
+    post:
+      x-swagger-router-controller: "auth/user/notif/fetch"
+      responses:
+        200:
+          description: successful response
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: "#/definitions/SetNotif"
+
   # alert
   /alert/list:
     post:
@@ -775,6 +801,16 @@ definitions:
     required:
       - url
 
+  # test
+  Test:
+    properties:
+      session_id:
+        type: string
+      data:
+        type: object
+    required:
+      - session_id
+
   # dashboard
   PostUrl:
     properties:
@@ -915,6 +951,15 @@ definitions:
       - email
       - token
       - password
+  SetNotif:
+    properties:
+      session_id:
+        type: string
+      endpoint:
+        type: string
+    required:
+      - session_id
+      - endpoint
 
   # worker
   WRules:
